--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap');
 
-:root {
-    --orange: #FFAA78;
-    --green: #80D08C;
-    --white: #ffff;
-    --blue: #00CFFF;
-    --black: #002800;
-    --grey: #DFE0DF;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -23,8 +14,10 @@ html {
 
 .main-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 100vw;
+    height: 100vh;
+    background-image: url("./assets/homepage_background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
